--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             L.geoJson(statesData).addTo(theMap);
 
             function getColor(d) {
-                return d > 6 ? '#31a354':
-                       d > 2  ? '#a1d99b':
-                                '#e5f5e0';
+                return d > thirdQuartile ? '#31a354':
+                       d > firstQuartile  ? '#a1d99b':
+                                        '#e5f5e0';
             }
 
             function style(feature) {
